--- a/linux_os/guide/system/accounts/enable_authselect/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/enable_authselect/ansible/shared.yml
@@ -9,14 +9,21 @@
 - name: Select authselect profile
   ansible.builtin.command:
     cmd: authselect select "{{ var_authselect_profile }}"
-  ignore_errors: yes
   register: result_authselect_select
+  failed_when: result_authselect_select.rc not in [0, 4]
 
 - name: Verify if PAM has been altered
   ansible.builtin.command:
     cmd: rpm -qV pam
   register: result_altered_authselect
   ignore_errors: yes
+  # return:
+  # - 0 if no alterations
+  # - otherwise: number of failured packages
+  #   We have 1 package here. So 1 it is.
+  failed_when: result_altered_authselect.rc not in [0, 1]
+  args:
+    warn: False
   when:
     - result_authselect_select is failed
 
