change: service_disabled/ansible: use failed_when instead of ignore_errors
Commands can fail because of multiple reasons. Even external, so
ignore_errors is not recommended.

systemctl list-unit-files <unit>

returns:
0 - found
1 - not found

--- a/shared/templates/service_disabled/ansible.template
+++ b/shared/templates/service_disabled/ansible.template
@@ -4,21 +4,25 @@
 # complexity = low
 # disruption = low
 {{%- if init_system == "systemd" %}}
-- name: Disable service {{{ SERVICENAME }}}
+- name: Block Disable service {{{ SERVICENAME }}}
   block:
-  - name: Disable service {{{ SERVICENAME }}}
-    systemd:
-      name: "{{{ DAEMONNAME }}}.service"
-      enabled: "no"
-      state: "stopped"
-      masked: "yes"
-    ignore_errors: 'yes'
+    - name: Disable service {{{ SERVICENAME }}}
+      block:
+        - name: Disable service {{{ SERVICENAME }}}
+          systemd:
+            name: "{{{ DAEMONNAME }}}.service"
+            enabled: "no"
+            state: "stopped"
+            masked: "yes"
+      rescue:
+        - name: "Intentionally ignored previous 'Disable service {{{ SERVICENAME }}}' failure, service was already disabled"
+          meta: noop
 
 - name: "Unit Socket Exists - {{{ DAEMONNAME }}}.socket"
   command: systemctl list-unit-files {{{ DAEMONNAME }}}.socket
   register: socket_file_exists
   changed_when: False
-  ignore_errors: True
+  failed_when: socket_file_exists.rc not in [0, 1]
   check_mode: False
 
 - name: Disable socket {{{ SERVICENAME }}}
