change: ansible: do not use ignore_errors w/ grep
Allow 0 or 1 as valid rc code and fail if there is real error.

EXIT STATUS
       Normally  the  exit status is 0 if a line is selected, 1 if no
       lines were selected, and 2 if an error occurred.  However, if the
       -q or --quiet or --silent is used and a line is selected, the
       exit status is 0 even if an error occurred.

--- a/linux_os/guide/system/software/integrity/crypto/configure_openssl_crypto_policy/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/crypto/configure_openssl_crypto_policy/ansible/shared.yml
@@ -12,7 +12,7 @@
 - name: "Test for crypto_policy group"
   command: grep '^\s*\[\s*crypto_policy\s*]' {{{ openssl_cnf_path }}}
   register: test_crypto_policy_group
-  ignore_errors: yes
+  failed_when: test_crypto_policy_group.rc not in [0, 1]
   changed_when: False
   check_mode: no
 
