change: ansible-lint_config silence non-fixable issues
As this is test, it is better to fix fixables now and if there is new
regression fail in future, than try to fix everything now.

If you want to fix some other class, just drop line from
tests/ansible-lint_config.yml and go from there.

--- a/tests/ansible-lint_config.yml
+++ b/tests/ansible-lint_config.yml
@@ -6,6 +6,14 @@ skip_list:
   - '503' # Tasks that run when changed should likely be handlers
   - no-tabs # Rule permissions_local_var_log uses explicit \t character
   - command-instead-of-module # sometimes systemctl must be executed instead of the module
+  - risky-file-permissions # Almost all rules do not set perms
+  - yaml # There is no use of using ansible-lint to run yamllint as yamllint has own test
+  - fqcn[action-core] # Most playbooks use old format currently, so skip for now.
+  - fqcn[action] # ditto
+  - jinja[spacing] # Too numerous now
+  - key-order[task] # Too numerous now
+  - no-free-form # Too numerous now
+  - name[template] # Style choice to skip this rule
 
 kinds:
   - playbook: "**/*.yml"
