Add implementation for accounts_users_netrc_file_permissions
- Add rule definition, oval rule and tests
- Assign as part of cis sle profiles

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -2128,7 +2128,9 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: manual # rule missing
+    status: automated
+    rules:
+      - accounts_users_netrc_file_permissions
 
   - id: 6.2.12
     title: Ensure no users have .rhosts files (Automated)
