--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -2310,7 +2310,9 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: manual # rule missing
+    status: automated
+    rules:
+      - accounts_users_netrc_file_permissions
 
   - id: 6.2.12
     title: Ensure no users have .rhosts files (Automated)
