--- a/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
@@ -34,6 +34,6 @@ ocil: |-
 
 warnings:
     - general: |-
-       Due to OVAL limitation, this rule can report a false negative in a
+       Due to OVAL limitations, this rule can report a false negative in a
        specific situation where two interactive users swap the group-ownership
        of folders or files in their respective home directories.
