--- a/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
@@ -1,5 +1,7 @@
 documentation_complete: true
 
+prodtype: sle12,sle15
+
 title: "Ensure users' .netrc Files are not group or world accessible"
 
 description: |-
