New Rule nftable loopback traffic

--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -1104,7 +1104,7 @@ controls:
       - l1_workstation
     status: manual
     rules:
-      - set_loopback_traffic
+      - set_nfttables_loopback_traffic
 
   - id: 3.5.2.7
     title: Ensure outbound and established connections are configured (Manual)
