--- a/linux_os/guide/system/network/network-nftables/set_nftables_loopback_traffic/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/set_nftables_loopback_traffic/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-title: 'Set configuration for loopback traffic'
+title: 'Set nftables configuration for loopback traffic'
 
 description: |-
     Configure the loopback interface to accept traffic.
@@ -17,11 +17,9 @@ rationale: |-
 severity: medium
 
 identifiers:
-    cce@sle12: CCE-92215-3
-    cce@sle15: CCE-91346-7 # Need new ones - These are the ones for iptables
+    cce@sle15: CCE-92481-1
 
 references:
-    cis@sle12: 3.5.2.1
     cis@sle15: 3.5.2.6 
     pcidss: Req-1.4.1
 
