Add reference to set_iptables_outband_n_established_connections_configured rule in CIS SLE controls

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -1020,7 +1020,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: manual # rule is missing / difficult to automate
+    status: automated
+    rules:
+    - set_iptables_outband_n_established_connections_configured
 
   - id: 3.5.2.4
     title: Ensure default deny firewall policy (Automated)
@@ -1045,7 +1047,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: manual 
+    status: automated
+    rules:
+    - set_iptables_outband_n_established_connections_configured
 
   - id: 3.5.3.3
     title: Ensure IPv6 firewall rules exist for all open ports (Automated)
