--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -1197,7 +1197,9 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: manual # rule missing
+    status: automated
+    rules:
+    - set_iptables_outband_n_established_connections_configured
 
   - id: 3.5.3.2.4
     title: Ensure firewall rules exist for all open ports (Automated)
@@ -1233,7 +1235,9 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: manual # rule missing
+    status: automated
+    rules:
+    - set_iptables_outband_n_established_connections_configured
 
   - id: 3.5.3.3.4
     title: Ensure IPv6 firewall rules exist for all open ports (Manual)
