--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
@@ -19,7 +19,7 @@ references:
     cis@sle12: 3.5.2.3,3.5.3.2
     cis@sle15: 3.5.3.2.3,3.5.3.3.3
 
-ocil_clause: 'there are no rules configuring outband or established connections'
+ocil_clause: 'there are no rules configuring outbound or established connections'
 
 ocil: |-
     Inspect the output of commands:
