Separate variables for banners This allows a separate regex for each file.

--- a/linux_os/guide/system/accounts/accounts-banners/banner_etc_motd/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/banner_etc_motd/rule.yml
@@ -69,7 +69,7 @@ references:
 ocil_clause: 'it does not display the required banner'
 
 ocil: |-
-    To check if the system login banner is compliant,
+    To check if the system motd banner is compliant,
     run the following command:
     <pre>$ cat /etc/motd</pre>
 
