--- a/linux_os/guide/system/accounts/accounts-banners/banner_etc_issue_net/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/banner_etc_issue_net/ansible/shared.yml
@@ -3,9 +3,9 @@
 # strategy = unknown
 # complexity = low
 # disruption = medium
-{{{ ansible_instantiate_variables("login_banner_text") }}}
+{{{ ansible_instantiate_variables("remote_login_banner_text") }}}
 
 - name: "{{{ rule_title }}} - ensure correct banner"
   copy:
     dest: /etc/issue.net
-    content: '{{{ ansible_deregexify_banner_etc_issue("login_banner_text") }}}'
+    content: '{{{ ansible_deregexify_banner_etc_issue("remote_login_banner_text") }}}'
