Update mode of /etc/shadow for sles os

--- a/linux_os/guide/system/permissions/files/permissions_important_account_files/file_permissions_etc_shadow/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_important_account_files/file_permissions_etc_shadow/rule.yml
@@ -74,6 +74,8 @@ template:
         filemode: '0000'
         filemode@debian10: '0640'
         filemode@debian11: '0640'
+        filemode@sle12: '0640'
+        filemode@sle15: '0640'
         filemode@ubuntu1604: '0640'
         filemode@ubuntu1804: '0640'
         filemode@ubuntu2004: '0640'
