--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_unix_chkpwd/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_unix_chkpwd/rule.yml
@@ -71,4 +71,5 @@ template:
     name: audit_rules_privileged_commands
     vars:
         path: /usr/sbin/unix_chkpwd
+        path@sle12: /sbin/unix_chkpwd
         path@sle15: /sbin/unix_chkpwd
