--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_login_events/audit_rules_login_events_faillog/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_login_events/audit_rules_login_events_faillog/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle12,ubuntu2004,ubuntu2204
+prodtype: sle12,sle15,ubuntu2004,ubuntu2204
 
 title: 'Record Attempts to Alter Logon and Logout Events - faillog'
 
@@ -28,6 +28,8 @@ identifiers:
     cce@sle12: CCE-83192-5
 
 references:
+    cis@sle12: 4.1.7
+    cis@sle15: 4.1.7
     cis@ubuntu2004: 4.1.7
     cis@ubuntu2204: 4.1.3.12
     disa: CCI-000130,CCI-000169,CCI-000172,CCI-002884
