--- a/linux_os/guide/system/logging/package_rsyslog-gnutls_installed/rule.yml
+++ b/linux_os/guide/system/logging/package_rsyslog-gnutls_installed/rule.yml
@@ -1,7 +1,6 @@
 documentation_complete: true
 
-prodtype: fedora,ol8,ol9,rhel7,rhel8,rhel9,sle12,sle15
-
+prodtype: fedora,ol8,ol9,rhel7,rhel8,rhel9
 title: 'Ensure rsyslog-gnutls is installed'
 
 description: |-
@@ -18,8 +17,6 @@ identifiers:
     cce@rhel7: CCE-86724-2
     cce@rhel8: CCE-82859-0
     cce@rhel9: CCE-83987-8
-    cce@sle12: CCE-91512-4
-    cce@sle15: CCE-91199-0
 
 references:
     anssi: BP28(R43)
