--- a/controls/cis_alinux2.yml
+++ b/controls/cis_alinux2.yml
@@ -316,7 +316,7 @@ controls:
     status: automated
     rules:
     - banner_etc_motd
-    - login_banner_text=cis_banners
+    - motd_banner_text=cis_banners
 
   - id: 1.7.1.2
     title: Ensure local login warning banner is configured properly (Scored)
@@ -325,13 +325,14 @@ controls:
     status: automated
     rules:
     - banner_etc_issue
-    - motd_banner_text=cis_banners
+    - login_banner_text=cis_banners
 
   - id: 1.7.1.3
     title: Ensure remote login warning banner is configured properly (Scored)
     levels:
     - l1
     status: automated
+    rules:
     - banner_etc_issue_net
     - remote_login_banner_text=cis_banners
 
