Support versions in the os_linux platform
This allows you to use versioned platforms in rules, for example:
platform: os_linux[rhel]>8.6

The version checks will now be supported by OVAL, Bash and Ansible
code.

Also adds unit tests for the Bash code.

--- a/shared/applicability/os_linux.yml
+++ b/shared/applicability/os_linux.yml
@@ -1,7 +1,6 @@
-name: "cpe:/o:{arg}"
+name: "cpe:/o:{arg}:{ver_specs_cpe}"
 title: "Operating System is {arg}"
-check_id: platform_os_linux_{arg}
-versioned: false
+versioned: true
 template:
     name: platform_os_linux
 args:
