--- a/tests/unit/ssg-module/data/applicability/chrony.yml
+++ b/tests/unit/ssg-module/data/applicability/chrony.yml
@@ -2,4 +2,4 @@ name: "cpe:/a:chrony"
 title: "Package chrony is installed"
 check_id: installed_env_has_chrony_package
 bash_conditional: {{{ bash_pkg_conditional("chrony") }}}
-ansible_conditional: {{{ ansible_pkg_conditional("chrony") }}}
+ansible_conditional: '{{{ ansible_pkg_conditional("chrony") }}}'
