--- a/applications/openshift/general/openshift_motd_exists/rule.yml
+++ b/applications/openshift/general/openshift_motd_exists/rule.yml
@@ -63,7 +63,7 @@ identifiers:
 
 references:
   nist: AC-8
-  srg: SRG-APP-000068-CTR-000120,SRG-APP-000069-CTR-000125
+  srg: SRG-APP-000068-CTR-000120
 
 severity: medium
 
