--- a/applications/openshift/general/oauth_provider_selection_set/rule.yml
+++ b/applications/openshift/general/oauth_provider_selection_set/rule.yml
@@ -23,7 +23,7 @@ severity: medium
 
 references:
   nist: AC-8
-  srg: SRG-APP-000068-CTR-000120,SRG-APP-000069-CTR-000125
+  srg: SRG-APP-000068-CTR-000120
 
 warnings:
 - general: |-
