--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_privileged_commands_shutdown/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_privileged_commands_shutdown/rule.yml
@@ -27,7 +27,11 @@ references:
     nist: AU-12(c)
     srg: SRG-OS-000477-GPOS-00222
 
-{{{ ocil_fix_srg_privileged_command("shutdown") }}}
+{{% if 'sle' not in product %}}
+{{{ ocil_fix_srg_privileged_command("shutdown","/usr/sbin/") }}}
+{{% else %}}
+{{{ ocil_fix_srg_privileged_command("shutdown","/sbin/") }}}
+{{% endif %}}
 
 template:
     name: audit_rules_privileged_commands
