--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
@@ -41,6 +41,7 @@ fixtext: |-
     </pre>
     ,use ip6tables in case of IPv6 is enabled and IPv6 rules need to be configured
 
-warnings: |- 
-    Changing firewall settings while connected over network can result in being locked out of
-    the system.
+warnings:
+    - general: |-
+        Changing firewall settings while connected over network can result in being locked out of
+        the system.
