--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_privileged_commands_poweroff/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_privileged_commands_poweroff/rule.yml
@@ -1,3 +1,9 @@
+{{%- if 'sle' not in product %}}
+  {{%- set path="/usr/sbin" %}}
+{{%- else %}}
+  {{%- set path="/sbin" %}}
+{{%- endif %}}
+
 documentation_complete: true
 
 title: 'Ensure auditd Collects Information on the Use of Privileged Commands - poweroff'
@@ -8,7 +14,7 @@ description: |-
     configured to use the <tt>augenrules</tt> program to read audit rules during
     daemon startup (the default), add a line of the following form to a file with
     suffix <tt>.rules</tt> in the directory <tt>/etc/audit/rules.d</tt>:
-    <pre>-a always,exit -F path=/usr/sbin/poweroff {{{ perm_x }}}-F auid&gt;={{{ auid }}} -F auid!=unset -F key=privileged</pre>
+    <pre>-a always,exit -F path={{{ path }}}/poweroff {{{ perm_x }}}-F auid&gt;={{{ auid }}} -F auid!=unset -F key=privileged</pre>
     If the <tt>auditd</tt> daemon is configured to use the <tt>auditctl</tt>
     utility to read audit rules during daemon startup, add a line of the following
     form to <tt>/etc/audit/audit.rules</tt>:
@@ -27,11 +33,7 @@ references:
     nist: AU-12(c)
     srg: SRG-OS-000477-GPOS-00222
 
-{{% if 'sle' not in product %}}
-{{{ ocil_fix_srg_privileged_command("poweroff","/usr/sbin/") }}}
-{{% else %}}
-{{{ ocil_fix_srg_privileged_command("poweroff","/sbin/") }}}
-{{% endif %}}
+{{{ ocil_fix_srg_privileged_command("poweroff","{{{ path }}}/") }}}
 
 template:
     name: audit_rules_privileged_commands
